<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:background="#ffBE80FF"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/completeRegistration"
            android:id="@+id/textView2"
            android:textSize="30dp"
            android:textColor="#ffffffff" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">

        <ScrollView android:id="@+id/signup_email_form" android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout android:id="@+id/complete_registration_form" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:orientation="vertical">

                    <AutoCompleteTextView android:id="@+id/firstName" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/firstName"
                        android:inputType="textEmailAddress" android:maxLines="1"
                        android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="#ffffffff"
                        android:textColor="#ffffffff" />

                    <EditText android:id="@+id/lastName" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/lastName"
                        android:imeActionLabel="@string/action_sign_in"
                        android:imeOptions="actionUnspecified"
                        android:maxLines="1" android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="#ffffffff"
                        android:textColor="#ffffffff"
                        android:inputType="textPersonName" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <EditText android:id="@+id/dateOfBirth" android:layout_width="250dp"
                        android:layout_height="wrap_content" android:hint="@string/dateOfBirth"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="#ffffffff"
                        android:textColor="#ffffffff" />
                    <ImageButton
                        android:id="@+id/calendarButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/dateOfBirth"
                        android:cropToPadding="true"
                        android:background="@android:color/transparent"
                        android:src="@drawable/calendar"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/dateOfBirth"
                        android:layout_toEndOf="@+id/dateOfBirth" />

                </RelativeLayout>

                <RelativeLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    tools:context=".MainActivity"
                    >
                    <RadioGroup
                        android:id="@+id/genderRadioGroup"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="32dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true">

                        <RadioButton
                            android:id="@+id/radioMale"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:checked="true"
                            android:drawableRight="@drawable/malegender"
                            android:layout_weight="1"
                            android:textSize="14dp"
                            android:text="@string/maleGender"
                            android:textColor="#ffffffff"
                            />
                        <RadioButton
                            android:id="@+id/radioFemale"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:checked="false"
                            android:drawableRight="@drawable/femalegender"
                            android:layout_weight="1"
                            android:textSize="14dp"
                            android:text="@string/femaleGender"
                            android:textColor="#ffffffff"
                            />
                    </RadioGroup>

                </RelativeLayout>

                <Button android:id="@+id/save" style="?android:textAppearanceSmall"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textStyle="bold"
                    android:textColor="#ffffffff"
                    android:background="#ff7e51c2"
                    android:hint="@string/save"
                    android:layout_below="@+id/dateOfBirth"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>

